--- a/bms-frontend/vercel.json
+++ b/bms-frontend/vercel.json
@@ -1,12 +1,3 @@
 {
-  "crons": [
-    {
-      "path": "/api/cron/payment-due-reminders",
-      "schedule": "0 9 * * *"
-    },
-    {
-      "path": "/api/cron/lease-expiring-reminders",
-      "schedule": "0 9 * * *"
-    }
-  ]
+  "crons": []
 }
