--- a/bms-frontend/package.json
+++ b/bms-frontend/package.json
@@ -56,6 +56,10 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "glob": "^10.5.0"
   }
 }
